Fixed bug #37054 (SoapClient Error Fetching http headers)